Fixed overflow behaviour.

--- a/org.jgrapes.portal.bootstrap4/resources/org/jgrapes/portal/bootstrap4/portal.css
+++ b/org.jgrapes.portal.bootstrap4/resources/org/jgrapes/portal/bootstrap4/portal.css
@@ -1,3 +1,8 @@
+/* Scroll portlet content (card body) not portlet */
+ .portlet-preview-content {
+    overflow: auto;
+ }
+
 /* Activate close only on selected. */
 #portalTabs .nav-link:not(.active) span {
     display: none;
